# OpenFaceFX

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: COMPATIBILITY.md  facefxwrapper.md  index.md  quickstart.tape  retargeting.md  studio.md  timing.md
docs/api/: aligners.md  batch.md  budget.md  captions.md  emotion.md  exporters.md  gltf.md  i18n.md  importers.md  index.md  inspect.md  jali.md  layers.md  lod.md  pipeline.md  retarget.md  ssml.md  streaming.md  texttags.md  timing.md  transforms.md  visemes.md  vo_audit.md
docs/stylesheets/: brand.css
examples/: acoustic-demo.html  demo_track.json  landing.html  preview.html  speech.allosaurus.txt  talking-face-demo.html  try-it.html
examples/dialogue/: README.md
examples/mappings/: minimal9.json  oculus15.json
integrations/unity/: README.md
src/openfacefx/: __init__.py  aligners.py  aligners_acoustic.py  alignment.py  anchors.py  batch.py  batch_manifest.py  bethesda.py  budget.py  cli.py  coart_jali.py  coarticulation.py  curves.py  edits.py  emotion.py  energy.py  events.py  export_a2f.py  export_captions.py  export_cues.py  export_gltf.py  export_godot.py  export_lip.py  export_live2d.py  export_livelink.py  export_spine.py  export_unity.py  export_unreal_notifies.py  export_vmd.py  export_vrma.py  facefxwrapper.py  g2p.py  gestures.py  gestures_layers.py  importers.py  importers_bvh.py  importers_csv.py  (+27 more)
tests/: test_aligners.py  test_aligners_acoustic.py  test_anchors.py  test_batchqa.py  test_breath.py  test_budget.py  test_captions.py  test_concat.py  test_confidence_qa.py  test_convert.py  test_core.py  test_e2e.py  test_edits.py  test_emotion.py  test_energy.py  test_events.py  test_export_a2f.py  test_export_cues.py  test_export_engines.py  test_export_lip.py  test_export_live2d_exp.py  test_export_livelink.py  test_export_spine.py  test_export_vmd.py  test_export_vrma.py  test_facefxwrapper.py  test_fleming_dobbs.py  test_g2p_oov_dict.py  test_gestures.py  test_gltf.py  test_hardening.py  test_i18n.py  test_importers.py  test_importers_bvh.py  test_importers_csv.py  test_importers_gltf.py  test_importers_vmd.py  test_inspect_validate.py  test_ipa.py  test_jali.py  (+23 more)
tools/: build-acoustic-demo.sh  build_preview.py  build_talking_head.py  lip_codec_research.py  preview_template.html  render_viseme_gallery.py
(+28 files in other folders)
