[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openfacefx"
version = "0.1.0"
description = "Open-source facial / lip-sync animation pipeline: audio + text -> viseme animation curves."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OpenFaceFX contributors" }]
keywords = ["lip-sync", "facial-animation", "viseme", "phoneme", "games", "animation"]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
# For real acoustic alignment, install one of these separately and feed its
# output into the pipeline via the adapters in openfacefx.alignment.
align = []  # e.g. montreal-forced-aligner (conda), or torch + a wav2vec2 model
dev = ["pytest>=7"]

[project.scripts]
openfacefx = "openfacefx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
