[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "openfacefx"
version = "0.7.0"
description = "Open-source facial / lip-sync animation pipeline: audio + text -> viseme animation curves."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "OpenFaceFX contributors" }]
keywords = ["lip-sync", "facial-animation", "viseme", "phoneme", "games", "animation"]
dependencies = ["numpy>=1.22"]

[project.urls]
Repository = "https://github.com/OpenFaceFX/OpenFaceFX"
Issues = "https://github.com/OpenFaceFX/OpenFaceFX/issues"
Changelog = "https://github.com/OpenFaceFX/OpenFaceFX/blob/main/CHANGELOG.md"
Demo = "https://openfacefx.github.io/OpenFaceFX/demo/"

[project.optional-dependencies]
# For real acoustic alignment, install one of these separately and feed its
# output into the pipeline via the adapters in openfacefx.alignment.
align = []  # e.g. montreal-forced-aligner (conda), or torch + a wav2vec2 model
dev = ["pytest>=7"]
# Documentation site (MkDocs Material + mkdocstrings). Build-time only — these
# never touch the numpy-only runtime. Pinned so the GitHub Pages build stays
# reproducible; CI installs this group before `mkdocs build`.
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.5",
]

[project.scripts]
openfacefx = "openfacefx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
